# swagger-output.json
@@ -32,10 +32,10 @@
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "password": {
-                  "example": "string"
+                  "example": "any"
                 }
               }
             }
@@ -62,13 +62,13 @@
               "type": "object",
               "properties": {
                 "name": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "password": {
-                  "example": "string"
+                  "example": "any"
                 }
               }
             }
@@ -115,7 +115,7 @@
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "string"
+                  "example": "any"
                 }
               }
             }
@@ -142,10 +142,10 @@
               "type": "object",
               "properties": {
                 "token": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "newPassword": {
-                  "example": "string"
+                  "example": "any"
                 }
               }
             }
@@ -185,7 +185,7 @@
               "type": "object",
               "properties": {
                 "ip": {
-                  "example": "string"
+                  "example": "any"
                 }
               }
             }
@@ -254,10 +254,10 @@
               "type": "object",
               "properties": {
                 "type": {
-                  "ERROR": "string"
+                  "example": "any"
                 },
                 "message": {
-                  "erro ao logar": "string"
+                  "example": "any"
                 }
               }
             }
@@ -290,7 +290,7 @@
               "type": "object",
               "properties": {
                 "rfid": {
-                  "example": "string"
+                  "example": "any"
                 }
               }
             }
@@ -326,10 +326,10 @@
               "type": "object",
               "properties": {
                 "rfid": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "userId": {
-                  "example": "string"
+                  "example": "any"
                 }
               }
             }
@@ -365,10 +365,10 @@
               "type": "object",
               "properties": {
                 "rfid": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "userId": {
-                  "example": "int"
+                  "example": "any"
                 }
               }
             }
@@ -531,8 +531,22 @@
       }
     },
     "/api/door/mode": {
-      "get": {
+      "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "mode": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -548,6 +562,48 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/door/cache": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
@@ -638,19 +694,19 @@
               "type": "object",
               "properties": {
                 "id": {
-                  "example": "int"
+                  "example": "any"
                 },
                 "name": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "isVerified": {
-                  "example": "boolean"
+                  "example": "any"
                 },
                 "isSuper": {
-                  "example": "boolean"
+                  "example": "any"
                 }
               }
             }
